crates/strider-analyze/tests/snapshots/v3__ppc32le__complex__bit_test_zero.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10010158:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "11" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ f2", shape=house, fillcolor="#163030"];
  "10" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v18" [color="#888888", style=dashed];
  "v18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v19" [color="#888888", style=dashed];
  "v19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x10010138:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "23" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "28" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "32" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "34" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "37" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "39" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "42" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "44" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="φ f1", shape=house, fillcolor="#163030"];
  "10" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v47" [color="#888888", style=dashed];
  "v47" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v48" [color="#888888", style=dashed];
  "v48" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ r4", shape=house, fillcolor="#163030"];
  "10" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v49" [color="#888888", style=dashed];
  "v49" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v50" [color="#888888", style=dashed];
  "v50" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="φ Val", shape=house, fillcolor="#163030"];
  "10" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "51" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "53" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "5" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "11" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "64" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
